<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mcb51a04.AddWorkout">
    <item
        android:id="@+id/action_workout"
        android:orderInCategory="100"
        android:title="@string/workout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exercises"
        android:orderInCategory="100"
        android:title="@string/manage_exercises"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_workouts"
        android:orderInCategory="100"
        android:title="@string/manage_workouts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
