<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:theme="@style/HeaderTheme"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/btnWorkout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/start_workout"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/history"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMngExercises"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/manage_exercises"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMngWorkouts"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/manage_workouts"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>