<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditExercise"
    tools:showIn="@layout/activity_edit_exercise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEditExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/edit_exercise"
            android:theme="@style/HeaderTheme" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/exercise_"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/current_weight"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtStWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/weight_increment"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtWeightIncrement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/repetitions"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/sets"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            android:textSize="20sp"
            android:textAlignment="center" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>