<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddWorkout"
    tools:showIn="@layout/activity_add_workout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/txtAddWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/add_new_workout"
            android:theme="@style/HeaderTheme" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/workout_name"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/add_exercise"
            android:textAlignment="center"
            android:textColor="#413E3E"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">

            <Spinner
                android:id="@+id/ddAddExercise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="85" />

            <Button
                android:id="@+id/btnAddExerciseToWorkout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:textSize="25sp"
                android:text="@string/plus"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exerciseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"></LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>